@@ -423,7 +423,7 @@ class RandInt(PyoObject):
             new `freq` attribute.
         
         """
-        self._port = x
+        self._freq = x
         x, lmax = convertArgsToLists(x)
         [obj.setFreq(wrap(x,i)) for i, obj in enumerate(self._base_objs)]
 
@@ -1192,3 +1192,137 @@ class XnoiseDur(PyoObject):
     def x2(self): return self._x2
     @x2.setter
     def x2(self, x): self.setX2(x)
+
+class Urn(PyoObject):
+    """
+    Periodic pseudo-random integer generator without duplicates.
+
+    Urn generates a pseudo-random integer number between 0 and `max` 
+    values at a frequency specified by `freq` parameter. RandInt will 
+    hold generated value until the next generation. Urn works like RandInt, 
+    except that it keeps track of each number which has been generated. After
+    all numbers have been outputed, the pool is reseted and the object send
+    a trigger signal.
+    
+    Parentclass: PyoObject
+
+    Parameters:
+
+    max : int, optional
+        Maximum value for the random generation. Defaults to 100.
+    freq : float or PyoObject, optional
+        Polling frequency. Defaults to 1.
+    
+    Methods:
+
+    setMax(x) : Replace the `max` attribute.
+    setFreq(x) : Replace the `freq` attribute.
+
+    Attributes:
+    
+    max : int. Maximum value.
+    freq : float or PyoObject. Polling frequency.
+
+    Notes:
+
+    Urn will sends a trigger signal when the pool is empty. 
+    User can retreive the trigger streams by calling obj['trig']. 
+    Useful to synchronize other processes. 
+
+    Examples:
+    
+    >>> s = Server().boot()
+    >>> s.start()
+    >>> mid = Urn(max=12, freq=10, add=60)
+    >>> fr = MToF(mid)
+    >>> sigL = SineLoop(freq=fr, feedback=.08, mul=0.3).out()
+    >>> amp = TrigExpseg(m["trig"], [(0,0),(.01,.25),(1,0)])
+    >>> sigR = SineLoop(midiToHz(84), feedback=0.05, mul=amp).out(1)
+    
+    """
+    def __init__(self, max=100, freq=1., mul=1, add=0):
+        PyoObject.__init__(self)
+        self._max = max
+        self._freq = freq
+        self._mul = mul
+        self._add = add
+        max, freq, mul, add, lmax = convertArgsToLists(max, freq, mul, add)
+        self._base_objs = [Urn_base(wrap(max,i), wrap(freq,i), wrap(mul,i), wrap(add,i)) for i in range(lmax)]
+        self._trig_objs = Dummy([TriggerDummy_base(obj) for obj in self._base_objs])
+
+    def __dir__(self):
+        return ['max', 'freq', 'mul', 'add']
+
+    def __del__(self):
+        for obj in self._base_objs:
+            obj.deleteStream()
+            del obj
+        del self._trig_objs
+
+    def __getitem__(self, i):
+        if i == 'trig':
+            return self._trig_objs
+        
+        if type(i) == SliceType:
+            return self._base_objs[i]
+        if i < len(self._base_objs):
+            return self._base_objs[i]
+        else:
+            print "'i' too large!"         
+
+    def play(self, dur=0, delay=0):
+        dur, delay, lmax = convertArgsToLists(dur, delay)
+        self._trig_objs.play(dur, delay)
+        self._base_objs = [obj.play(wrap(dur,i), wrap(delay,i)) for i, obj in enumerate(self._base_objs)]
+        return self
+
+    def out(self, chnl=0, inc=1, dur=0, delay=0):
+        return self
+
+    def stop(self):
+        self._trig_objs.stop()
+        [obj.stop() for obj in self._base_objs]
+        return self
+
+    def setMax(self, x):
+        """
+        Replace the `max` attribute.
+        
+        Parameters:
+
+        x : int
+            new `max` attribute.
+        
+        """
+        self._max = x
+        x, lmax = convertArgsToLists(x)
+        [obj.setMax(wrap(x,i)) for i, obj in enumerate(self._base_objs)]
+
+    def setFreq(self, x):
+        """
+        Replace the `freq` attribute.
+        
+        Parameters:
+
+        x : float or PyoObject
+            new `freq` attribute.
+        
+        """
+        self._freq = x
+        x, lmax = convertArgsToLists(x)
+        [obj.setFreq(wrap(x,i)) for i, obj in enumerate(self._base_objs)]
+
+    def ctrl(self, map_list=None, title=None, wxnoserver=False):
+        self._map_list = [SLMap(1., 2., 'lin', 'max', self._max),
+                          SLMap(0.1, 20., 'lin', 'freq', self._freq),
+                          SLMapMul(self._mul)]
+        PyoObject.ctrl(self, map_list, title, wxnoserver)
+
+    @property
+    def max(self): return self._max
+    @max.setter
+    def max(self, x): self.setMax(x)
+    @property
+    def freq(self): return self._freq
+    @freq.setter
+    def freq(self, x): self.setFreq(x)
